Fixed itemListFixedHeader for Windows with scrollbars

--- a/modules/item-list/item-list.less
+++ b/modules/item-list/item-list.less
@@ -1,40 +1,38 @@
 .item-list {
+    position: relative;
+}
+.item-list__content {
     height: 400px;
     overflow-y: scroll;
     overflow-x: hidden;
-    position: relative;
 }
 
-.item_fixed_window .item__header,
-.item_fixed_window .item__actions {
-    position: fixed;
-    z-index: 999;
-    top: 82px;
-    background: white;
-
-    .chat & {
-        top: 41px;
+.item_fixed_window,
+.item_fixed_bottom {
+    &  .item__header,
+    &  .item__actions {
+        z-index: 999;
+        background: white;
+    }
+    & .item .item__header,
+    & .item .item__actions {
+        z-index: auto;
+        background: transparent;
     }
 }
-.item_fixed_window .item .item__header,
-.item_fixed_window .item .item__actions {
-    position: absolute;
-    top: 0;
-    z-index: 0;
-    background: transparent;
+.item_fixed_window {
+    position: static !important;
+}
+.item_fixed_bottom {
+    .item__header,
+    .item__actions {
+        bottom: 0;
+        top: auto;
+    }
+    .item .item__header,
+    .item .item__actions {
+        bottom: auto;
+        top: 0;
+    }
 }
 
-.item_fixed_bottom .item__header,
-.item_fixed_bottom .item__actions {
-    bottom: 0;
-    top: auto;
-    z-index: 999;
-    background: white;
-}
-.item_fixed_bottom .item .item__header,
-.item_fixed_bottom .item .item__actions {
-    bottom: auto;
-    top: 0;
-    z-index: 0;
-    background: transparent;
-}
