--- a/modules/item/item.less
+++ b/modules/item/item.less
@@ -4,8 +4,6 @@
    background: @white;
    margin: 0;
    position: relative;
-   top: 0;
-   left: 0;
    box-sizing: border-box;
    padding: @itemPadding;
    padding-top: @itemIconSize + 2 * @itemPadding;
